<resources>
    <string name="app_name">Formular</string>
    <string name="bine_ati_venit_in_aplicatia_android_studio_ladybug">Bine ati venit in aplicatia Android Studio Ladybug!</string>
    <string name="adaugare_student">Adaugare Student</string>
    <string name="vizualizare_studenti">Vizualizare Studenti</string>
    <string name="formular_adaugare_student">FORMULAR ADAUGARE STUDENT</string>
    <string name="nume">NUME: </string>
    <string name="introduceti_numele">INTRODUCETI NUMELE</string>
    <string name="gen">GEN: </string>
    <string name="facultate">FACULTATE:</string>
    <string name="restanta">RESTANTA:</string>
    <string name="introduceti_venitul">INTRODUCETI VENITUL</string>
    <string name="feminin">feminin</string>
    <string name="masculin">masculin</string>
    <string name="neutru">neutru</string>
    <string name="venit">VENIT:</string>
    <string name="data">DATA:</string>
    <string name="apasa_pentru_adaugare_student">APASA PENTRU ADAUGARE STUDENT</string>
    <string-array name="spinner_entries">
        <item>Informatica Economica</item>
        <item>Cibernetica Economica</item>
        <item>Statistica Economica</item>
    </string-array>
</resources>